Minor text-wrapping issues on mobile

--- a/src/app/coding/coding.component.scss
+++ b/src/app/coding/coding.component.scss
@@ -1,6 +1,8 @@
 .terminal-input {
   background-color: inherit;
   flex: 1 1 0;
+  max-width: 100%;
+  width: 100%;
 
   &:focus, &:active {
     border: none;
